--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
-0.9626 2022-07-21
+0.9625_01 2022-07-21
   [New Featuires][
     * Add the following native API
       int32_t (*get_class_id_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, int32_t* error, const char* file, int32_t line);
-      const char* SPVM_API_strerror(SPVM_ENV* env, SPVM_VALUE* stack, int32_t errno_value, int32_t length) {
+      const char* (*strerror)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t errno_value, int32_t length) {
 
 0.9625 2022-07-20
   [New Features]
