Improve destructor compile error message.

--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
-0.9625_01 2022-07-21
+0.9625_02 2022-07-21
   [New Featuires][
     * Add the following native API
       int32_t (*get_class_id_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, int32_t* error, const char* file, int32_t line);
       const char* (*strerror)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t errno_value, int32_t length);
-
+  [Changes]
+    * Improve destructor compile error message.
 0.9625 2022-07-20
   [New Features]
     * Add Error::System class.
