--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
+0.9627 2022-07-22
+  [New Feature]
+    * Add new_string_array native API.
 0.9626 2022-07-22
-  [New Featuires][
+  [New Features]
     * Add the following native API
       int32_t (*get_class_id_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, int32_t* error, const char* file, int32_t line);
       const char* (*strerror)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t errno_value, int32_t length);
