--- a/Changes
+++ b/Changes
@@ -47,6 +47,13 @@
       [After]
       has capacity : ro int;
       has values : ro byte[];
+
+    * Change the ByteList default capacity from 16 to the length.
+    * Change the ShortList default capacity from 16 to the length.
+    * Change the IntList default capacity from 16 to the length.
+    * Change the LongList default capacity from 16 to the length.
+    * Change the FloatList default capacity from 16 to the length.
+    * Change the DoubleList default capacity from 16 to the length.
       
 0.9627 2022-07-22
   [New Feature]
