Improve Array->memmove performance

--- a/Changes
+++ b/Changes
@@ -35,7 +35,7 @@
       has values : byte[];
       [After]
       has values : ro byte[];
-
+    * Improve Array->memmove performance
 0.9627 2022-07-22
   [New Feature]
     * Add new_string_array native API.
