--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.9629 2022-07-25
   [Document Fix]
     * Add the doc of clear method of Point class.
+  [Document]
+    * Add Fields section to Point class
   
 0.9628 2022-07-25
   [New Features]
