Remove "SPVM/" from native file name.

--- a/Changes
+++ b/Changes
@@ -7,7 +7,8 @@
     * Add Fields section to Point class
     * Add Super Class section to Point3D class
     * Add Fields section to Point3D class
-  
+  [Changes]
+    * Remove "SPVM/" from native file name.
 0.9628 2022-07-25
   [New Features]
     * Add replace method to ByteList, ShortList, IntList, LongList, FloatList, DoubleList, StringList, List.
