Add copy_string_address to Array class.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * Add copy_object_address to Array class.
     * Add copy_range_object_address to Array class.
     * Add copy_range_string_address to Array class.
+    * Add copy_string_address to Array class.
   [Document Fix]
     * Add the doc of clear method of Point class.
     * Add the doc of clear method of Point3D class.
