--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
     * Add copy_range_string_address to Array class.
     * Add copy_string_address to Array class.
     * Add equals_object_address to Array class.
+    * Add equals_string_address to Array class.
   [Document Fix]
     * Add the doc of clear method of Point class.
     * Add the doc of clear method of Point3D class.
