--- a/Changes
+++ b/Changes
@@ -35,7 +35,8 @@
     * Remove "SPVM/" from native file name.
     * Array->equals_object can recieve undef equality checker, and check address equality.
     * Add exception logic to memset_byte, memset_double, memset_float, memset_int, memset_long,
-      memset_object, memset_short, memset_string
+      memset_object, memset_short, memset_string of Array class.
+    * Add exception logic to memcpy_object_address of Array class.
   [Incompatible Changes]
     * Change the following method definition of Array class. Sorry. This is my simple definition mistake.
       [Before]
