--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9630 2022-07-27
+  [Changes]
+    * Fn->index, Fn->index_len, Fn->rindex, Fn->rindex_len throw an exception when the arguments are invalid.
 0.9629 2022-07-26
   [New Features]
     * Add copy_object_address to Array class.
