--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 0.9630 2022-07-27
+  [Performance fix]
+    * Fn->join use StringBuffer internally.
   [Changes]
     * Fn->index, Fn->index_len, Fn->rindex, Fn->rindex_len throw an exception when the arguments are invalid.
+    * If the element of the strings of the argument of Fn->join is undef, "" is joined.
 0.9629 2022-07-26
   [New Features]
     * Add copy_object_address to Array class.
