--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
     * If the element of the strings of the argument of Fn->join is undef, "" is joined.
     * Fn->ord throws exceptions when the input is undefined or the length is less than 0.
     * Fn->pow, Fn->powi throws exceptions when the arguments are invalid.
+    * Fn->join throws exceptions when the arguments are invalid.
     * Improve Fn->substr exception messages.
   [Deprecation]
     * Fn->trim_ascii_space is renamed to Fn->trim. Fn->trim_ascii_space is deprecated.
