--- a/Changes
+++ b/Changes
@@ -11,6 +11,8 @@
     * Improve Fn->substr exception messages.
   [Deprecation]
     * Fn->trim_ascii_space is renamed to Fn->trim. Fn->trim_ascii_space is deprecated.
+  [Document Fix]
+    * Fix Fn->chr doc.
   
 0.9629 2022-07-26
   [New Features]
