--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.9630 2022-07-27
+  [New Features]
+    * Add GET_CODE_POINT_ERROR_OVER_STRING_RANGE, GET_CODE_POINT_ERROR_INVALID_UTF8 to Fn class.
   [Performance fix]
     * Fn->join use StringBuffer internally.
     * Improve substr performance.
