Fn->index_len throw exception.   The offset + the length specified by the argument must be less than or equal to the length of the string

--- a/Changes
+++ b/Changes
@@ -18,7 +18,10 @@
   [Document Fix]
     * Fix Fn->chr doc.
     * Fix Fn->contains doc.
-  
+  [Incompatible Changes]
+    * Fn->index_len throw exception.
+      The offset + the length specified by the argument must be less than or equal to the length of the string
+      
 0.9629 2022-07-26
   [New Features]
     * Add copy_object_address to Array class.
