--- a/Changes
+++ b/Changes
@@ -22,8 +22,9 @@
     * Fix Fn->chr doc.
     * Fix Fn->contains doc.
     * Add Fn->is_array doc.
-    * Fix the doc that the range of Array->memcpy_(byte|short|int|long|flaot|double) is wrong.
+    * Fix the doc that the range of Array->memcpy_(byte|short|int|long|flaot|double|object_address|string_address) is wrong.
     * Fix the doc that the range of Array->copy_range_(byte|short|int|long|flaot|double) is wrong.
+    * Fix the doc that the range of Array->memset_(byte|short|int|long|flaot|double|object|string) is wrong.
   [Incompatible Changes]
     * Fn->index_len throw exception.
       The offset + the length specified by the argument must be less than or equal to the length of the string
