--- a/Changes
+++ b/Changes
@@ -33,7 +33,9 @@
       
       my $offset = 0;
       my $code_point = Fn->get_code_point($string, \$offset);
-      
+    * Fn->shorten throw exceptions
+      The string must be defined
+      The length must be greater than or equal to 0
   [Bug Fix]
     * Fix the bug that Fn->rindex_len, Fn->rindex don't work well.
     * Fix the bug Arrya->memmove_string_address calls Arrya->memmove_object. The correct code call Arrya->memmove_object_address.
