Add Fn->to_long_with_base tests Fn->trim throw exceptions   The string must be defined Fn->contains become the alias for the following code   my $ret = Fn->index($string, $substring, 0) >= 0; Improve Fn->to_int_with_base exception message. Improve Fn->to_long_with_base exception message.

--- a/Changes
+++ b/Changes
@@ -12,6 +12,12 @@
     * Fn->join throws exceptions when the arguments are invalid.
     * Improve Fn->substr exception messages.
     * Fn->repeat allows 0 count.
+    * Fn->index_len, Fn->contains, Fn->index can check empty string.
+    * Improve Fn->to_int_with_base exception message.
+    * Improve Fn->to_long_with_base exception message.
+    * Fn->contains become the alias for the following code
+      my $ret = Fn->index($string, $substring, 0) >= 0;
+      
   [Deprecation]
     * Fn->trim_ascii_space is renamed to Fn->trim. Fn->trim_ascii_space is deprecated.
     * Fn->get_next_code_point is renamed to Fn->get_code_point. Fn->get_next_code_point is deprecated.
