Add SPVM::new_any_object_array function and use it.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.9630_01 2022-07-28
+  [New Features]
+    * Add SPVM::new_any_object_array function.
   [Changes]
     * Excnahge API shows the stack trace when exceptions are thrown
 0.9629_01 2022-07-28
